1.0.70 (Build 2025100715)
    - Added Ningxia region (requires Poodll China subscription)

1.0.69 (Build 2025100714)
 - Support for Moodle 5.0 and PHP 8.4
 - Support for custom Cloud Poodll server

1.0.68 (Build 2025100713)
- Added the option to record video
- Better handling when activity has no target words
- Fixed for target words not working when step_prepare not present in activity

1.0.67 (Build 2025100711)
- added rubric results template

1.0.66 (Build 2025100711)
- Added proper justification for R2L languages as feedback
- Better title for Generic level
- Fix for broken rubric grading (when P-Chat not installed)

1.0.65 (Build 2025100710)
- Added native language setting for AI graded feedback

1.0.64 (Build 2025100709)
- Fixed issue with activity step sequence setting not backing up / restoring properly

1.0.63 (Build 2025100708)
- Added options for display of results to student (star rating, cefr level etc)

1.0.62 (Build 2025100706)
- Added Mobile App Support

1.0.61 (Build 2025100705)
- Added a "Record->model(if set)" mode, ie no prepare step

1.0.60 (Build 2025100704)
 - Rebuilt js and denamed the AMD so pre M3.9 can use it
 
1.0.59 (Build 2025100703)
- Added text option to media elements (topic and model)
- Fixed a bug that would break add/edit solo activities on edit form load
- Fixed a bug with multibyte characters garbling in the displayed transcript

1.0.58 (Build 2025100701)
- Improvements to privacy Impl.

1.0.57 (Build 2025100700)
- Support for PHP 8.2 and 8.3

1.0.56 (Build 2024092500)
- Messed up version number ... no going back now..
- Added Vietnamese Language Support
- Changed the display of the Attempt No. to show the attempt number(ie 1, 2, 3) instead of the attempt id
- Small hack to skip "Confirm New Attempt" dialog on non-compliant Moodle versions

1.0.55 (Build 2024082600)
- Fix for layout(display of introduction) issue on Adaptable theme

1.0.54 (Build 2024073100)
- Fixed bug which would kill text processing on PHP7.x
